# FaceRecongnition

./: README.md
LSM303D/: lsm303d.py
boost_client/: .main.cpp.swp  CMakeLists.txt  conanfile.py  main.cpp
boost_server/: .main.cpp.swp  CMakeLists.txt  conanfile.py  main.cpp
opencv/: Dockerfile  conanfile.py
opencv/src/: CMakeLists.txt  hello.cpp
pad/: pad.py
rtmp_nginx/: Dockerfile  ffserver.conf  nginx.conf  skrypt.sh
servo/: servo.py
thermal/: Dockerfile  main.py
